--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
-PORT=9000
+PORT=5000
 # DB_URL=mongodb+srv://oteng:toor8853@cluster0.pfczz.mongodb.net/
 DB_URL='mongodb+srv://oteng:toor8853@cluster0.pfczz.mongodb.net/syncline?retryWrites=true&w=majority'
+SECRET=Mysecret
+REFRESH_SECRET=MRPapoiadsfasfas
