--- a/package.json
+++ b/package.json
@@ -14,18 +14,21 @@
     "@gilbertco/restify-async-wrap": "^0.1.2",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^8.3.2",
     "mysql": "^2.18.1",
     "node-restify-validation": "^1.3.0",
     "nodemon": "^3.1.0",
     "restify": "^11.1.0",
+    "restify-jwt-community": "^2.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
     "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/lodash": "^4.17.0",
     "@types/node": "^20.12.7",
     "@types/restify": "^8.5.12"
