--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@gilbertco/restify-async-wrap": "^0.1.2",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
@@ -21,7 +23,8 @@
     "node-restify-validation": "^1.3.0",
     "nodemon": "^3.1.0",
     "restify": "^11.1.0",
-    "restify-jwt-community": "^2.0.0",
+    "restify-cors-middleware": "^1.1.1",
+    "restify-errors": "^8.0.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
     "yup": "^1.4.0"
@@ -31,6 +34,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/lodash": "^4.17.0",
     "@types/node": "^20.12.7",
-    "@types/restify": "^8.5.12"
+    "@types/restify": "^8.5.12",
+    "@types/restify-cors-middleware": "^1.0.5"
   }
 }
