--- a/.env
+++ b/.env
@@ -1,5 +1,10 @@
-PORT=6000
+PORT=7000
 # DB_URL=mongodb+srv://oteng:toor8853@cluster0.pfczz.mongodb.net/
 DB_URL='mongodb+srv://oteng:toor8853@cluster0.pfczz.mongodb.net/syncline?retryWrites=true&w=majority'
 SECRET=Mysecret
 REFRESH_SECRET=MRPapoiadsfasfas
+PUSHER_APP_ID=1796716
+PUSHER_KEY=8321e17ab6fe6061f2a4
+PUSHER_SECRET=41e355c5f857a9360271
+PUSHER_CLUSTER=mt1
+PUSHER_TLS=true
