--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "npx tsc",
     "start": "node dist/server.ts",
-    "dev": "nodemon src/server.ts"
+    "dev": "nodemon src/server.ts",
+    "test": "NODE_ENV=test jest --runInBand  --detectOpenHandles --forceExit"
   },
   "author": "Emmanuel",
   "license": "ISC",
@@ -18,10 +19,12 @@
     "dotenv": "^16.4.5",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
+    "mongodb-memory-server": "^9.2.0",
     "mongoose": "^8.3.2",
     "mysql": "^2.18.1",
     "node-restify-validation": "^1.3.0",
     "nodemon": "^3.1.0",
+    "pusher": "^5.2.0",
     "restify": "^11.1.0",
     "restify-cors-middleware": "^1.1.1",
     "restify-errors": "^8.0.2",
@@ -30,11 +33,20 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.5",
+    "@babel/preset-env": "^7.24.5",
+    "@babel/preset-typescript": "^7.24.1",
     "@types/bcrypt": "^5.0.2",
+    "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/lodash": "^4.17.0",
     "@types/node": "^20.12.7",
     "@types/restify": "^8.5.12",
-    "@types/restify-cors-middleware": "^1.0.5"
+    "@types/restify-cors-middleware": "^1.0.5",
+    "@types/supertest": "^6.0.2",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.1.2"
   }
 }
